bug fixed buttons aligned

--- a/src/UserDetails/UserDetails.css
+++ b/src/UserDetails/UserDetails.css
@@ -1,4 +1,4 @@
-.user_card{
+/* .user_card{
     background: #caf0f8;
     padding: 20px;
     border-radius: 5px;
@@ -8,6 +8,20 @@
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 1px 5px;
     transition: .4s ease-in-out;
+} */
+
+.user_card{
+    display: flex;
+    flex: 1 1 17rem;
+    margin: 10px 10px;
+    border-radius: 5px;
+    flex-direction: column;
+    background: #caf0f8;
+    box-shadow: rgba(0, 0, 0, 0.4);
+    padding: 10px 20px;
+    align-self: normal;
+    align-items: center;
+    transition: .4s ease-in-out;
 }
 
 .user_card:hover{
@@ -16,26 +30,29 @@
 }
 
 .user-title{
-    margin-top: 5px;
+    margin: 10px 0;
     text-transform: capitalize;
     color: #03071e;
 }
 
 .user-details{
-    margin-top: 10px;
-    color: #14213d;
+    margin-bottom: 10px;
+    color: #14213d; 
 }
 
-.view-btn{
-    text-decoration: none;
-}
 
 .blog-img{
-    height: 145px;
+    max-width: 250px;
+}
+
+.card-footer{
+    display: flex;
+    margin-top: auto;
 }
 
 .common-btn{
-    margin-top: 10px;
+    display: flex;
+    margin-top: auto;
     margin-left: 5px;
     margin-right: 5px;
     padding: 6px 8px;
